--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CRUD</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CRUD</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  {% include "partials/header.html.twig" %}
-  {% block body %}{% endblock %}
+    <div class="min-h-screen bg-slate-100">
+  
+        {% include "partials/header.html.twig" %}
+        {% block body %}{% endblock %}
+    </div>
+    {% block js %}{% endblock %}
 </body>
 </html>
