--- a/templates/paginas/cores/editar.html.twig
+++ b/templates/paginas/cores/editar.html.twig
@@ -1,19 +1,27 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<div>
-		<h2>Editar cor "{{ color.name }}"</h2>
-		<a href="/?pagina=cores">Voltar</a>
-	</div>
-	<form action="/?pagina=cores&acao=salvar" method="POST">
-		<div>
-			<label for="name">Nome</label>
-			<input type="text" name="name" id="name" value="{{ color.name }}" required>
-		</div>
+	<div class="max-w-7xl mx-auto px-4">
+        <div class="w-full py-4">
+            <div class="flex flex-row justify-between items-center">
+                <h2 class="font-semibold text-4xl">Editar cor "{{ color.name }}"</h2>
+                <a href="/?pagina=cores" class="px-3 py-2 text-xs bg-red-500 text-red-100 rounded transition hover:bg-red-600 hover:text-red-50">Voltar</a>
+            </div>
+            <div class="bg-white rounded shadow-lg mt-4">
+                <form action="/?pagina=cores&acao=salvar" method="POST">
+                    <div class="flex flex-col space-y-4 p-4">
+                        <div class="flex flex-col">
+                            <label for="name" class="block font-semibold mb-3">Nome</label>
+                            <input type="text" name="name" id="name" value="{{ color.name }}" class="shadow px-2 py-1 border focus:outline-none focus:ring-0" required>
+                        </div>
 
-		<input type="hidden" name="acao" value="salvar">
-		<input type="hidden" name="id" value="{{ color.id }}">
+                        <input type="hidden" name="acao" value="salvar">
+                        <input type="hidden" name="id" value="{{ color.id }}">
 
-		<button type="submit">Salvar</button>
-	</form>
+                        <button type="submit" class="px-3 py-2 bg-blue-500 text-blue-100 rounded transition hover:bg-blue-600 hover:text-blue-50">Salvar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
