--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,6 +1,6 @@
-<header>
-    <h2>CRUD - Teste para a VERSOTECH</h2>
-    <nav>
+<header class="bg-white text-center py-4">
+    <h2 class="font-bold text-6xl mb-4">CRUD - Teste para a VersoTech</h2>
+    <nav class="flex justify-center items-center space-x-6">
         <a href="/">Usuarios</a>
         <a href="/?pagina=cores">Cores</a>
     </nav>
